Bug 5778 - Should check if kmalloc succeeds
Summary: Should check if kmalloc succeeds
Status: CLOSED CODE_FIX
Alias: None
Product: File System
Classification: Unclassified
Component: ReiserFS (show other bugs)
Hardware: i386 Linux
: P2 low
Assignee: Diego Calleja
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-23 01:43 UTC by Daniel Marjam
Modified: 2006-01-16 04:53 UTC (History)
0 users

See Also:
Kernel Version: 2.6.15-rc6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
add kmalloc check (2.69 KB, patch)
2006-01-16 04:50 UTC, Diego Calleja
Details | Diff

Description Daniel Marjam 2005-12-23 01:43:20 UTC
Problem Description:
In the file file.c at line 193 there is a kmalloc.
I believe the return value isn't checked.
Comment 1 Diego Calleja 2006-01-16 04:50:44 UTC
Created attachment 7037 [details]
add kmalloc check

Sorry for taking so many time to fix a so simple bug

Note You need to log in before you can comment on or make changes to this bug.